--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
     "@react-navigation/native": "^6.0.2",
+    "dom-to-image": "^2.6.0",
     "expo": "^52.0.7",
     "expo-constants": "~17.0.3",
     "expo-font": "~13.0.1",
     "expo-image": "~2.0.0",
     "expo-image-picker": "~16.0.2",
     "expo-linking": "~7.0.2",
+    "expo-media-library": "~17.0.2",
     "expo-router": "~4.0.6",
     "expo-splash-screen": "~0.29.11",
     "expo-status-bar": "~2.0.0",
@@ -35,6 +37,7 @@
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
+    "react-native-view-shot": "^4.0.0",
     "react-native-web": "~0.19.10"
   },
   "devDependencies": {
